# onnx2oracle

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  pages.yml
docker/: README.md  docker-compose.yml
docs/: architecture.excalidraw  architecture.html  for-agents.html  index.html  llms.txt  presentation.html
docs/assets/: main.js  style.css
docs/guide/: 01-quickstart.html  02-how-it-works.html  03-models.html  04-connect-to-cloud.html  05-custom-models.html
docs/reference/: cli.html  model-matrix.html  troubleshooting.html
reports/: reranker-verification-2026-05-21.md
scripts/: check_model_compatibility.py  render_preset_tables.py  run_real_db_integration.sh
src/onnx2oracle/: __init__.py  _ident.py  cli.py  connection.py  graph_stages.py  loader.py  pipeline.py  preflight.py  presets.py  verify.py
src/onnx2oracle/data/: docker-compose.yml
tests/: conftest.py  test_cli.py  test_connection.py  test_graph_stages.py  test_ident.py  test_loader.py  test_loader_integration.py  test_pipeline.py  test_preflight.py  test_presets.py
