[project]
name = "onnx2oracle"
version = "0.2.0"
description = "Load ONNX embedding and reranker models into Oracle AI Database with one command"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [{ name = "jasperan", email = "23caj23@gmail.com" }]
keywords = ["oracle", "onnx", "embeddings", "vector-search", "ai"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Database",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
  "typer>=0.12",
  "rich>=13.7",
  "oracledb>=2.5",
  "onnx>=1.16",
  "onnxruntime>=1.18",
  "onnxruntime-extensions>=0.11",
  "transformers>=4.40,<5",
  "huggingface-hub>=0.23",
  "numpy>=1.26",
  "tomli>=2.0; python_version<'3.11'",
]

[project.optional-dependencies]
export = [
  "torch>=2.2",
]
dev = [
  "pytest>=8.0",
  "pytest-cov>=5.0",
  "ruff>=0.5",
  "pyright>=1.1",
  "testcontainers[oracle]>=4.0",
]

[project.scripts]
onnx2oracle = "onnx2oracle.cli:app"

[project.urls]
Homepage = "https://jasperan.github.io/onnx2oracle/"
Repository = "https://github.com/jasperan/onnx2oracle"
Issues = "https://github.com/jasperan/onnx2oracle/issues"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
onnx2oracle = ["data/*.yml"]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]
# B008: Typer/FastAPI use function calls in argument defaults by design
ignore = ["B008"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
markers = [
  "integration: requires a running Oracle AI Database Free container",
  "slow: slow tests (HF downloads), skip with `-m 'not slow'`",
]

[tool.uv]

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu124" }
